# mousepad

./: .gitignore  AUTHORS  AUTHORS-pre-0.3.0  ChangeLog  ChangeLog-pre-0.3.0  Makefile  Makefile.am  Mousepad.desktop.in.in  Mousepad.spec.in  MousepadHelp.in  NEWS  NEWS-pre-0.3.0  README  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  module.xml  mousepad.appdata.xml.in  mousepad.desktop  mousepad.desktop.in  mousepad.desktop.in.in  org.xfce.mousepad.policy.in.in
docs/: Makefile.am
docs/manual/: Makefile.am  mousepad.xsl
docs/manual/C/: Makefile.am  Mousepad.xml.in
docs/manual/C/images/: Makefile.am
icons/: Makefile.am
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
mousepad/: Makefile.am  main.c  mousepad-action-group.c  mousepad-action-group.h  mousepad-application.c  mousepad-application.h  mousepad-close-button.c  mousepad-close-button.h  mousepad-csource.pl  mousepad-dbus-infos.xml  mousepad-dbus.c  mousepad-dbus.h  mousepad-dialogs.c  mousepad-dialogs.h  mousepad-document.c  mousepad-document.h  mousepad-encoding-dialog.c  mousepad-encoding-dialog.h  mousepad-encoding.c  mousepad-encoding.h  mousepad-exo.c  mousepad-exo.h  mousepad-file.c  mousepad-file.h  mousepad-gtkcompat.h  mousepad-language-action.c  mousepad-language-action.h  mousepad-languages.c  mousepad-languages.h  mousepad-marshal.list  mousepad-preferences.c  mousepad-preferences.h  mousepad-prefs-dialog.c  mousepad-prefs-dialog.glade  mousepad-prefs-dialog.h  mousepad-print.c  mousepad-print.h  mousepad-private.h  mousepad-replace-dialog.c  mousepad-replace-dialog.h  (+28 more)
po/: ChangeLog  LINGUAS  Makefile  Makevars  Mousepad.pot  POTFILES  POTFILES.in  TRANSLATORS  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  (+40 more)
src/: Makefile  Makefile.am  callback.c  callback.h  dialog.c  dialog.h  dnd.c  dnd.h  encoding.c  encoding.h  file.c  file.h  font.c  font.h  indent.c  indent.h  keyevent.c  keyevent.h  linenum.c  linenum.h  main.c  menu.c  menu.h  mousepad  mousepad.h  search.c  search.h  selector.c  selector.h  undo.c  undo.h  utils.c  utils.h  window.c  window.h
src/.deps/: mousepad-callback.Po  mousepad-dialog.Po  mousepad-dnd.Po  mousepad-encoding.Po  mousepad-file.Po  mousepad-font.Po  mousepad-gtksourceiter.Po  mousepad-indent.Po  mousepad-keyevent.Po  mousepad-linenum.Po  mousepad-main.Po  mousepad-menu.Po  mousepad-search.Po  mousepad-selector.Po  mousepad-undo.Po  mousepad-utils.Po  mousepad-window.Po
